change carousel class naming & fix carousel overflow glitch on safari

--- a/src/components/pages/Home/carousel.scss
+++ b/src/components/pages/Home/carousel.scss
@@ -26,13 +26,16 @@
     width: fit-content;
   }
 
-  &-slider {
+  &-inner {
     display: flex;
     width: 100%;
     height: 100%;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
+
+    // Fix overflow glitch on safari
+    transform: translateZ(0);
 
     @media only screen and (max-width: $breakpoint-md) {
       min-height: 55rem;
@@ -71,7 +74,7 @@
         padding: 2rem;
       }
 
-      & .details__category {
+      &-category {
         font-size: 1.2rem;
         font-weight: 500;
         color: $color-white;
@@ -84,7 +87,7 @@
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
       }
 
-      & h2 {
+      &-title {
         font-size: 3.2rem;
         margin-bottom: 1.5rem;
 
@@ -93,7 +96,7 @@
         }
       }
 
-      & .summary {
+      &-summary {
         display: flex;
         align-items: center;
         font-size: 1.6rem;
@@ -113,7 +116,7 @@
         }
       }
 
-      & .overview {
+      &-overview {
         font-size: 1.4rem;
         line-height: 1.4;
         overflow: hidden;
@@ -122,7 +125,7 @@
     }
   }
 
-  &-container {
+  &-list {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -143,66 +146,66 @@
       margin-bottom: 1rem;
       align-self: flex-start;
     }
-  }
 
-  &-item {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 18%;
-    padding: 1rem;
-    border-radius: 10px;
-    overflow: hidden;
-    object-fit: cover;
-    opacity: 0.5;
-    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
-    background-color: $color-white;
-    cursor: pointer;
-
-    &.active {
-      opacity: 1;
-      background-color: $color-gray-light;
-    }
-
-    &__img {
-      height: 100%;
-      border-radius: 6px;
-      margin-right: 1rem;
-
-      @media only screen and (max-width: $breakpoint-lg) {
-        border-radius: 4px;
-      }
-    }
-
-    &__title {
-      font-size: 1.4rem;
-      line-height: 1.6rem;
-      font-weight: 700;
-    }
-
-    .active &__background {
-      position: absolute;
-      bottom: 0;
-      left: 0;
+    &__item {
+      position: relative;
+      display: flex;
+      align-items: center;
       width: 100%;
-      height: 5px;
+      height: 18%;
+      padding: 1rem;
       border-radius: 10px;
-      background: $color-gradient;
-      animation: carousel-loading 5s;
+      overflow: hidden;
+      object-fit: cover;
+      opacity: 0.5;
+      transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      background-color: $color-white;
+      cursor: pointer;
 
-      @keyframes carousel-loading {
-        0% {
-          width: 0;
+      &.active {
+        opacity: 1;
+        background-color: $color-gray-light;
+      }
+
+      &-img {
+        height: 100%;
+        border-radius: 6px;
+        margin-right: 1rem;
+
+        @media only screen and (max-width: $breakpoint-lg) {
+          border-radius: 4px;
         }
-        100% {
-          width: 100%;
+      }
+
+      &-title {
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        font-weight: 700;
+      }
+
+      .active &-background {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        border-radius: 10px;
+        background: $color-gradient;
+        animation: carousel-loading 5s;
+
+        @keyframes carousel-loading {
+          0% {
+            width: 0;
+          }
+          100% {
+            width: 100%;
+          }
         }
       }
     }
   }
 
-  &-controller {
+  &-indicator {
     margin-top: 1rem;
     display: none;
     align-items: center;
